--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore dolorum minima, animi aliquid laboriosam,
+                molestias dolor obcaecati aut facere magni quo error nobis enim voluptate nemo minus, possimus repellat
+                earum?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores fuga sapiente praesentium corporis
+                incidunt ratione, voluptatibus facilis reprehenderit velit voluptatum quam deleniti nisi necessitatibus
+                qui, blanditiis accusantium iusto perspiciatis nulla.</p>
         </article>
     </main>
 </body>
