--- a/index.html
+++ b/index.html
@@ -14,15 +14,11 @@
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore dolorum minima, animi aliquid laboriosam,
-                molestias dolor obcaecati aut facere magni quo error nobis enim voluptate nemo minus, possimus repellat
-                earum?</p>
+            <p>A HTML é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as CSS, criamos as configurações visuais que um site vai ter.</p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores fuga sapiente praesentium corporis
-                incidunt ratione, voluptatibus facilis reprehenderit velit voluptatum quam deleniti nisi necessitatibus
-                qui, blanditiis accusantium iusto perspiciatis nulla.</p>
+            <p>JavaScript é uma linguagem de script para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do DOM.</p>
         </article>
     </main>
 </body>
